- Changes to make Optimizer work again. - Some Optimizations in code (featured by Intellij). - Use Java SAX as XML Reader (XMLReader is deprecated). - Some Bug Fixes i forgot (Too much work, 5 days in a row without commit).